Causeview Package Complete/ant script/retrieveUnpackaged/objects/Goal__c.object
<CustomObject>
    <description>Causeview - Goal tracking  for campaigns and appeals</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check to mark goal as active.</description>
        <inlineHelpText>Check to mark goal as active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Appeal__c</fullName>
        <description>Campaign or appeal related to Goal</description>
        <label>Campaign/Appeal</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Flag__c</fullName>
        <formula>IF(

(OR((MONTH(TODAY()) &gt; 3) &amp;&amp; (TEXT(YEAR(TODAY()))) =  Fiscal_Year__c, (MONTH(TODAY()) &gt; 3) &amp;&amp; (TEXT(YEAR(TODAY()))) =  Fiscal_Year__c)) ,
&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Current Fiscal Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
        <description>Fiscal Year applied to goal</description>
        <inlineHelpText>YYYY</inlineHelpText>
        <label>Fiscal Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes related to goal.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Goal__c</fullName>
        <description>Defines overall goal of campaign.  This field is used when quarterly goals are not required</description>
        <inlineHelpText>Defines overall goal of campaign.  This field is used when quarterly goals are not required</inlineHelpText>
        <label>Overall Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_Goal__c</fullName>
        <description>Revenue goal for Q1</description>
        <inlineHelpText>Revenue goal for Q1</inlineHelpText>
        <label>Q1 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_Goal__c</fullName>
        <description>Revenue goal for Q2</description>
        <inlineHelpText>Revenue goal for Q2</inlineHelpText>
        <label>Q2 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_Goal__c</fullName>
        <description>Revenue goal for Q3</description>
        <inlineHelpText>Revenue goal for Q3</inlineHelpText>
        <label>Q3 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Goal__c</fullName>
        <description>Sum of quarterly goals or overall goal</description>
        <formula>IF(
ISBLANK(Overall_Goal__c),
Q1_Goal__c  +   Q2_Goal__c  +  Q3_Goal__c  +   Q4_Goal__c,
Overall_Goal__c
)</formula>
        <inlineHelpText>Sum of quarterly goals  or overall goal</inlineHelpText>
        <label>Total Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Goal</label>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AllQuarterly</fullName>
        <active>true</active>
        <description>Verifies that all quarterly goal fields are populated.</description>
        <errorConditionFormula>IF(ISBLANK(Overall_Goal__c),
  OR(ISBLANK(Q1_Goal__c),ISBLANK(Q2_Goal__c),ISBLANK(Q3_Goal__c),ISBLANK(Q4_Goal__c)), 
FALSE)</errorConditionFormula>
        <errorMessage>When defining quaterly goals, all four quarters must be filled in (use 0 for no goal)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QuarterlyOROverall</fullName>
        <active>true</active>
        <description>Validates that quarterly OR overall goal is set and not both</description>
        <errorConditionFormula>AND(
	NOT(ISBLANK(Overall_Goal__c)),
	OR(
		NOT(ISBLANK(Q1_Goal__c)),
		NOT(ISBLANK(Q2_Goal__c)),
		NOT(ISBLANK(Q3_Goal__c)),
		NOT(ISBLANK(Q4_Goal__c))
	)
)</errorConditionFormula>
        <errorMessage>You cannot define both an overall goal and quarterly goals.  Please define one or the other.</errorMessage>
    </validationRules>
</CustomObject>